k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motor-be-deployment
  namespace: motor-manage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motor-be
  template:
    metadata:
      labels:
        app: motor-be
    spec:
      containers:
        - name: motor-be
          image: vantablackj/motor-manage-be:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret
