k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motor-be-service
  namespace: motor-manage
spec:
  type: NodePort
  selector:
    app: motor-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
      nodePort: 32000
