k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: motor-manage
  annotations:
    kubernetes.io/ingress.class: "traefik" # Default for K3s
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: motor-be-service
                port:
                  number: 5000
